--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
-  "token": "MTQzNDE3MjY0NzQ5ODg0MjI1Nw.GdQFuf.HwBnxLfAxvJpJSvHeh0ig9jxNyLK6v36Og_IcM",
+  "token": "MTQzNDE3MjY0NzQ5ODg0MjI1Nw.GQFwUp.TgkZt-8aLC206OlF1IpcgwVK56EKcwsuNTsbYw",
   "clientId": "1434172647498842257",
   "guildId": "1392728471222091920"
 }
+
