--- a/config.json
+++ b/config.json
@@ -1,6 +1,4 @@
 {
-  "token": "MTQzNDE3MjY0NzQ5ODg0MjI1Nw.GQFwUp.TgkZt-8aLC206OlF1IpcgwVK56EKcwsuNTsbYw",
-  "clientId": "1434172647498842257",
-  "guildId": "1392728471222091920"
+  "clientId": "YOUR_CLIENT_ID",
+  "guildId": "YOUR_GUILD_ID"
 }
-
