--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
-  "clientId": "YOUR_CLIENT_ID",
-  "guildId": "YOUR_GUILD_ID"
+  "clientId": "1434172647498842257",
+  "guildId": "1392728471222091920"
 }
+
